feat: Add deployment scripts and related item

--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "scripts": {
+    "deploy": "serverless deploy --stage dev --region ap-southeast-1",
+    "package": "serverless package --stage dev --region ap-southeast-1",
+    "teardown": "serverless remove --stage dev --region ap-southeast-1",
+    "deploy:production": "serverless deploy --stage prod --region ap-southeast-1",
+    "package:production": "serverless package --stage prod --region ap-southeast-1",
+    "teardown:production": "serverless remove --stage prod --region ap-southeast-1",
+    "print:aws-policy": "node ./misc/aws-policy.template.js"
+  },
   "devDependencies": {
     "serverless": "^1.45.1"
   }
