chore: Auto inject env variables

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 AWS_ACCESS_KEY_ID=AAAAAAAAAAAAAAAAAAAA
 AWS_SECRET_ACCESS_KEY=abcdefghijklmnopqrst/uvwxyzabcdefghijklm
+AWS_ACCOUNT_ID=123456789012
 
-AWS_USER_ID=123456789012
-STACK_NAME=hello-world
-SERVERLESS_STAGE=prod
+SERVERLESS_SERVICE_NAME=hello-serverless
+SERVERLESS_STAGE=dev
+SERVERLESS_REGION=ap-southeast-1
