--- a/serverless.yml
+++ b/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: ${env:STACK_NAME} # NOTE: update this with your service name
+service: ${env:SERVERLESS_SERVICE_NAME} # NOTE: update this with your service name
 #app: your-app-name
 #tenant: your-tenant-name
 
@@ -23,7 +23,7 @@ provider:
   name: aws
   runtime: nodejs10.x
   stage: ${env:SERVERLESS_STAGE}
-  region: ap-southeast-1
+  region: ${env:SERVERLESS_REGION}
 
 # you can overwrite defaults here
 #  stage: dev
